# screeps

./: .gitignore  CMakeLists.txt  Gruntfile.js  README.md  addTwo.c  addTwo.wasm  build.js  build.sh  conanfile.py  conanfile.txt  emscripten.profile  iterate.cpp  main.js  package-lock.json  package.json  role.builder.js  role.carrier.js  role.extractor.js  role.harvester.js  role.miner.js  role.nurse.js  role.repairJunkie.js  role.scout.js  role.tower.js  role.upgrader.js  scout.js  sourceManager.ts  wasm_loader.js
pathfind/: CMakeLists.txt  conanfile.py  conanfile.txt
pathfind/include/: a.hpp  agent-factory.hpp  display.hpp  frame.hpp  pathfinder.hpp
pathfind/src/: main.cpp
template/: Gruntfile.js
